# pjSipKF

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 0001_init.py
app/: config.py  db.py  logging_config.py  main.py  models.py  schemas.py
app/api/: routes.py
app/services/: scanner.py
control-plane/: .dockerignore  Dockerfile  go.mod  go.sum
control-plane/cmd/api/: main.go
control-plane/internal/config/: config.go
control-plane/internal/httpserver/: middleware.go  router.go  router_e2e_test.go
control-plane/internal/logging/: logger.go
control-plane/internal/mediacore/: client_stub.go  factory_grpc.go  factory_stub.go  grpc_client.go  types.go
control-plane/internal/metrics/: metrics.go
control-plane/internal/registrar/: memory_store.go  memory_store_test.go  service.go
media-core/: CMakeLists.txt  README.md
media-core/src/: grpc_server.cpp  grpc_server.h  main.cpp
proto/: buf.gen.yaml  go.mod
proto/mediacore/: session.proto
proto/mediacore/v1/: session.pb.go
tests/: test_health.py  test_scan.py
